Resolved issue of overflow

--- a/3-column-preview-card-component-main/style.css
+++ b/3-column-preview-card-component-main/style.css
@@ -1,5 +1,3 @@
-/* Global */
-
 :root {
   --very-light-gray: hsl(0, 0%, 95%);
   --transparent-white: hsla(0, 0%, 100%, 0.75);
@@ -15,15 +13,22 @@
 }
 
 body {
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
   background-color: var(--very-light-gray);
   font-size: 15px;
   font-family: "Lexend Deca", sans-serif;
   font-weight: 400;
   line-height: 1.5rem;
+}
+
+.container {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 900px;
 }
 
 h3 {
@@ -52,13 +57,6 @@ button:focus {
   color: var(--very-light-gray);
   border: 2px solid var(--very-light-gray);
   outline: none;
-}
-
-.container {
-  display: flex;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 900px;
 }
 
 .card {
@@ -91,18 +89,15 @@ button:focus {
 @media screen and (max-width: 938px) {
   .container {
     flex-direction: column;
-    margin: 1rem;
     width: 85%;
   }
 
   .orange.card {
     border-radius: 10px 10px 0px 0px;
-    margin-top: auto;
   }
 
   .very-dark-cyan.card {
     border-radius: 0px 0px 10px 10px;
-    margin-bottom: auto;
   }
 
   button {
